-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3
-
-
e1d69a2ca (dev)
Running the example qt3d/tests/manual/pointlinesize produces a following error and the line width cannot be changed in the example:
Qt3D.Renderer.RHI.Backend: RHI Unhandled render state N10Qt3DRender6Render9PointSizeE
Qt3D.Renderer.RHI.Backend: RHI Unhandled render state N10Qt3DRender6Render9LineWidthE
Qt3D.Renderer.RHI.Backend: RHI Unhandled render state N10Qt3DRender6Render9PointSizeE
Qt3D.Renderer.RHI.Backend: RHI Unhandled render state N10Qt3DRender6Render9LineWidthE
The same example works in Qt 5.15.16
For Gerrit Dashboard: QTBUG-120472 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
529087,2 | RHI: implement the LineWidth render state | dev | qt/qt3d | Status: MERGED | +2 | 0 |