RHI: implement the LineWidth render state

For some reason it was forgotten.

There is not PointWidth on RHI so the linked issue cannot be fully
fixed.

Task-number: QTBUG-120472
Change-Id: Id35e0cbcc89b7e8e4771db7bcfb7b1ec6b6a60bc
Reviewed-by: Mike Krus <mike.krus@kdab.com>